# airgap-json-formatter

./: .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.desktop  LICENSE  README.md  airgap_formatter.html  airgap_formatter.js  build.rs  docker-compose.desktop.yml  docker-compose.yml  manifest.json  sw.js
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml  deploy-branch.yml  deploy.yml
docs/: prd.md
docs/qa/assessments/: 10.1-nfr-20260128.md  10.1-risk-20260128.md  10.1-test-design-20260128.md  10.1-trace-20260128.md  10.2-nfr-20260128.md  10.2-nfr-v2-20260128.md  10.2-risk-20260128.md  10.2-test-design-20260128.md  10.2-trace-20260128.md  10.3-nfr-20260128.md  10.3-risk-20260128.md  10.3-test-design-20260128.md  10.3-trace-20260128.md  10.4-nfr-20260128.md  10.4-risk-20260128.md  10.4-test-design-20260128.md  10.4-trace-20260128.md  10.5-nfr-20260128.md  10.5-risk-20260128.md  10.5-test-design-20260128.md  10.5-test-design-v2-20260128.md  10.5-trace-20260128.md  10.6-nfr-20260128.md  10.6-risk-20260128.md  10.6-test-design-20260128.md  10.6-trace-20260128.md  10.7-nfr-20260128.md  10.7-risk-20260128.md  10.7-test-design-20260128.md  10.7-trace-20260128.md  11.0-nfr-20260128.md  11.0-nfr-v4-20260128.md  11.0-risk-20260128.md  11.0-test-design-20260128.md  11.0-test-design-v3-20260128.md  11.0-trace-20260128.md  8.1-nfr-20260128.md  8.1-risk-20260128.md  8.1-test-design-20260128.md  8.1-trace-20260128.md  (+37 more)
docs/qa/gates/: 10.1-rust-markdown-renderer.yml  10.2-mermaid-js-integration.yml  10.3-bridge-layer-markdown-methods.yml  10.4-format-auto-detection-extension.yml  10.5-markdown-preview-pane.yml  10.6-markdown-syntax-highlighting.yml  10.7-theme-extension-markdown.yml  11.0-responsive-mobile-friendly-ui.yml  2.10-json-syntax-highlighting.yml  7.0-spike-xml-formatting-feasibility.yml  8.1-productionize-xml-formatter.yml  8.2-productionize-xml-highlighter.yml  8.3-bridge-layer-xml-methods.yml  8.4-format-auto-detection.yml  8.5-toolbar-format-selector.yml  8.6-xml-tree-model.yml  8.7-integration-testing.yml  9.1-rust-share-encoding-module.yml  9.2-rust-share-decoding-validation.yml  9.3-share-button-ui-integration.yml
docs/qa/test-plans/: 8.7-xml-integration.md
docs/qa/test-reports/: 8.7-xml-integration-report.md
docs/stories/: 10.1.rust-markdown-renderer.md  10.2.mermaid-js-integration.md  10.3.bridge-layer-markdown-methods.md  10.4.format-auto-detection-extension.md  10.5.markdown-preview-pane.md  10.6.markdown-syntax-highlighting.md  10.7.theme-extension-markdown.md  11.0.responsive-mobile-friendly-ui.md  2.10.json-syntax-highlighting.md  2.9.fix-loading-screen-timing.md  3.0.collapsible-json-treeview-epic.md  3.1.qjson-tree-model.md  3.2.json-treeview-qml.md  3.3.copy-controls-toggle.md  4.1.auto-format-expand-all.md  4.2.json-history-save-load.md  7.0.spike-report.md  7.0.spike-xml-formatting-feasibility.md  8.1.productionize-xml-formatter.md  8.2.productionize-xml-highlighter.md  8.3.bridge-layer-xml-methods.md  8.4.format-auto-detection.md  8.5.toolbar-format-selector.md  8.6.xml-tree-model.md  8.7.integration-testing.md  9.0.time-limited-url-sharing-epic.md  9.1.rust-share-encoding-module.md  9.2.rust-share-decoding-validation.md  9.3.share-button-ui-integration.md
docs/workflows/: epic-10-11-development.dot  epic-8-9-10-11-development.dot
pkg/: airgap_json_formatter.d.ts  airgap_json_formatter.js  airgap_json_formatter_bg.wasm  airgap_json_formatter_bg.wasm.d.ts
public/: bridge.js  history-storage.js  index.html  manifest.json  mermaid-config.js  sw.js
qt/: CMakeLists.txt  asyncserialiser.h  jsonbridge.cpp  jsonbridge.h  main.cpp  qjsontreeitem.cpp  qxmltreeitem.cpp  qxmltreeitem.h  qxmltreemodel.cpp  qxmltreemodel.h  theme.cpp  theme.h
qt/qml/: Header.qml  HistoryPanel.qml  InputOutputToggle.qml  InputPane.qml  JsonTreeView.qml  Main.qml  MarkdownPreview.qml  OutputPane.qml  OverflowMenu.qml  PassphrasePrompt.qml  ShareDialog.qml  StatusBar.qml  Theme.qml  Toolbar.qml
qt/tests/: CMakeLists.txt  tst_format_detection.cpp  tst_format_selector.cpp  tst_jsonbridge_xml.cpp  tst_markdown_bridge.cpp  tst_mermaid.cpp  tst_qxmltreemodel.cpp  tst_responsive_ui.cpp  tst_theme.cpp
qt/tests/integration/: tst_xml_integration.cpp
scripts/: bump_version.sh  verify-contrast.js
src/: highlighter.rs  lib.rs  markdown_highlighter.rs  markdown_renderer.rs  share.rs  xml_formatter.rs  xml_highlighter.rs
tests/: format_detection_tests.html  markdown_bridge_tests.html  markdown_preview_tests.html  mermaid_tests.html  share_bridge_tests.html  wasm_tests.rs
