[package]
name = "airgap_json_formatter"
version = "0.1.0"
edition = "2021"
description = "Security-first, client-side JSON formatting tool"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "html", "dump-load"] }
once_cell = "1.19"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "dump-load", "yaml-load", "default-themes"] }

[profile.release]
opt-level = "s"
lto = true

# Disable wasm-opt to avoid table growth bug in versions 108-118
# See: https://github.com/AztecProtocol/aztec-packages/issues/12379
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
