[package]
name = "airgap_json_formatter"
version = "0.1.3"
edition = "2021"
description = "Security-first, client-side JSON formatting tool"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
quick-xml = "0.37"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

# Disable wasm-opt to avoid table growth bug in versions 108-118
# See: https://github.com/AztecProtocol/aztec-packages/issues/12379
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
