[package]
name = "airgap_json_formatter"
version = "0.1.7"
edition = "2021"
description = "Security-first, client-side JSON formatting tool"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
quick-xml = "0.37"
flate2 = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

# Disable wasm-opt to avoid table growth bug in versions 108-118
# See: https://github.com/AztecProtocol/aztec-packages/issues/12379
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
